--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.show-sql=true
 
 theater.seat.basic.price=100.00
 theater.seat.premium.price=125.00
+
+#30 seconds for demo, normally we would give 10 minutes for payment after which we would expire the reservation and delete it
+payment.session.timeout.in.msec=30000
+polling.frequency.in.msec=10000
